--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="js/app.js"></script>
-    <script>
-    $(function(){
-
-    });
-    </script>
   </head>
   <body>
     <div id="marquee">
-      <h1>Memory</h2>
+      <h1>Simple Memory Game</h2>
       <ul>
         <li><h2>Score: <span id="score">0</span></h2></li>
         <li><input type="button" value="Reset"></li>
